<resources>
    <string name="app_name">틀린그림쏙쏙</string>

    <string name="app_name_part1">틀린</string>
    <string name="app_name_part2">그</string>
    <string name="app_name_part3">림쏙쏙</string>

    <!-- common -->
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>

    <!-- AD -->
    <string name="admob_app_id">ca-app-pub-5813878503406225~5288452366</string>
    <string name="banner_ad_unit_id">ca-app-pub-5813878503406225/1232877035</string>
    <string name="reward_ad_unit_id">ca-app-pub-5813878503406225/4218913276</string>

    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_ad_unit_id_for_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="native_ad_unit_id_for_test">ca-app-pub-3940256099942544/2247696110</string>

    <!-- 공통 -->
    <string name="game_start">시작!</string>
    <string name="game_prepare">준비</string>
    <string name="game_prepare_complete">준비 완료</string>
    <string name="guest">GUEST</string>
    <string name="guest2">(GUEST)</string>
    <string name="facebook">페이스북</string>
    <string name="kakao">카카오</string>
    <string name="google">구글</string>
    <string name="naver">네이버</string>
    <string name="please_retry">다시 시도해 주세요.</string>

    <!-- 권한 -->
    <string name="camera_permission_title">카메라 권한 필요</string>
    <string name="camera_permission_content">앱 사용을 위해 카메라 권한이 필요합니다</string>
    <string name="camera_permission_confirm">설정 열기</string>
    <string name="camera_permission_dismiss">취소</string>

    <!-- MyProfile -->
    <string name="account_facebook_login">Facebook 아이디로 로그인</string>
    <string name="account_google_login">Google 아이디로 로그인</string>
    <string name="my_profile_login">로그인</string>
    <string name="my_profile_logout">로그아웃</string>
    <string name="my_profile_create_account">계정생성</string>
    <string name="my_profile_close">닫기</string>
    <string name="my_profile_sso">간편 로그인</string>
    <string name="my_profile_nickname">닉네임</string>
    <string name="my_profile_version">버전정보</string>
    <string name="my_profile_withdrawal">탈퇴하기</string>
    <string name="my_profile_withdrawal_description_1">정말로 탈퇴하시나요?</string>
    <string name="my_profile_withdrawal_description_2">탈퇴 후 게임 데이터는 복구할 수 없습니다.</string>
    <string name="my_profile_withdrawal_n">역시 안할래</string>
    <string name="my_profile_withdrawal_y">응!할거야</string>
    <string name="my_profile_nickname_edit_label">새 닉네임</string>
    <string name="my_profile_nickname_edit_content_empty">새 닉네임을 입력하세요.</string>
    <string name="my_profile_logout_success">로그아웃 성공</string>
    <string name="my_profile_logout_fail">로그아웃 실패</string>
    <string name="my_profile_withdrawal_success">회원탈퇴 성공</string>
    <string name="my_profile_withdrawal_fail">회원탈퇴 실패</string>

    <!-- SignGate -->
    <string name="sign_gate_title">3초 간편로그인!</string>
    <string name="sign_gate_guide">원하시는 소셜 계정으로 로그인할 수 있어요!\n로그인 후에는 기기를 변경해도 데이터가 보존돼요.\n또한 내 프로필을 조금 더 멋지게 꾸밀 수 있죠.</string>
    <string name="sign_gate_close">닫기</string>

    <string name="blank"></string>
    <string name="network_error_title">네트워크 오류</string>
    <string name="network_error">네트워크 연결 상태를 확인해 주세요.</string>
    <string name="network_request_error">"네트워크 요청을 실패했습니다. 다시 시도해 주세요."</string>
    <string name="alert_dialog_restart">재시작</string>
    <string name="alert_dialog_confirm">확인</string>
    <string name="alert_dialog_dismiss">취소</string>
    <string name="alert_duplicated_id">해당 아이디와 동일한 계정이 이미 존재합니다.</string>

    <!-- Home -->
    <string name="home_quit_message">앗, 떠나시나요?</string>
    <string name="home_quit_y">응!안녕</string>
    <string name="home_quit_n">아냐아냐</string>
    <string name="home_logout_message1">로그아웃 하시나요?</string>
    <string name="home_logout_message2">게임 데이터는 날아가지 않는답니다.</string>
    <string name="home_logout_y">응!할거야</string>
    <string name="home_logout_n">역시 안할래</string>
    <string name="home_setting_title">게임설정</string>
    <string name="home_setting_sound">SOUND</string>
    <string name="home_setting_sound_background">배경음악</string>
    <string name="home_setting_sound_effect">효과음</string>
    <string name="home_setting_sound_vibration">터치 시 진동</string>
    <string name="home_setting_notification">NOTIFICATION</string>
    <string name="home_setting_notification_push">Push 알림</string>
    <string name="home_setting_account">ACCOUNT</string>
    <string name="home_setting_account_no_member">현재 QUEST 이시네요!</string>
    <string name="home_setting_account_member">%1$s 님은 지금\n %2$s 계정으로 로그인 중이에요.</string>
    <string name="home_setting_account_login">로그인</string>
    <string name="home_setting_account_logout">로그아웃</string>
    <string name="home_setting_account_create_account">계정생성</string>
    <string name="home_setting_account_profile">프로필 관리</string>
    <string name="home_play_solo">혼자하기</string>
    <string name="home_play_solo_en">Single Play</string>
    <string name="home_play_multi">같이하기</string>
    <string name="home_play_multi_en">Multi Play</string>
    <string name="home_play_quit">종료하기</string>
    <string name="home_play_quit_en">Exit Game</string>

    <!-- single game -->
    <string name="game_prepare_start">START!</string>

    <string name="diff_game_exit">게임 종료</string>
    <string name="diff_game_exit_alert">진행 중인 게임을 종료하시겠습니까?</string>
    <string name="diff_next_round_dialog_title">모든 정답을 맞추셨습니다!</string>
    <string name="diff_game_finish_dialog_title">네트워크 연결이 원활하지 않습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="diff_finish">나가기</string>
    <string name="diff_continue">계속하기</string>
    <string name="diff_next">다음</string>
    <string name="diff_complete">확인</string>

    <string name="diff_fail_dialog_content">앗! 제한시간이 끝났어요</string>
    <string name="diff_fail_dialog_sub_content">광고를 보면 이어서 할 수 있어요</string>
    <string name="diff_fail_dialog_give_up">포기할래</string>
    <string name="diff_fail_dialog_show_ad">이어서 할래</string>
    <string name="diff_new_month_update_alert_dialog">새로운 월간 스테이지가 열렸습니다 🎉\n지금 바로 새 도전에 나서보세요!</string>

    <string name="diff_game_list_life_point_term">Tap a stage to view levels.</string>
    <string name="diff_game_no_heart">하트가 모자라요. 잠시 후 재도전!</string>
    <string name="diff_game_no_heart_ad_popup_title">하트가 모자라요</string>
    <string name="diff_game_no_heart_ad_popup_content">하트가 모자라요. 광고를 시청하고 게임을 진행하시겠어요?</string>

    <!--entry-->
    <string name="entry_crate_lobby">방 생성</string>
    <string name="entry_search_lobby">방 찾기</string>
    <string name="qr_network_error">네트워크 요청을 실패했습니다. QR 코드를 다시 스캔해 주세요.</string>
    <string name="qr_guide_message">QR코드를 스캔하면\n대기방에 초대됩니다!</string>
    <string name="qr_dialog_message">지금 종료하면 게임이 시작되지 않을 수 있습니다.\n그래도 종료하시겠습니까?</string>
    <string name="multi_room_player_count_s">플레이어 %s명</string>
    <string name="multi_lobby_title">로비</string>
    <string name="multi_lobby_invite_subtitle">초대하기</string>
    <string name="multi_lobby_game_setting_sub_title">게임설정</string>
    <string name="multi_lobby_invite_lobby_num_title">초대코드</string>
    <string name="multi_lobby_invite_copy_success">초대코드가 복사되었습니다.</string>
    <string name="multi_lobby_game_setting_difficulty_1">쉬움</string>
    <string name="multi_lobby_game_setting_difficulty_2">보통</string>
    <string name="multi_lobby_game_setting_difficulty_3">어려움</string>
    <string name="multi_lobby_game_setting_limit_time_title">제한시간</string>
    <string name="multi_lobby_game_setting_limit_time_s">%s초</string>
    <string name="multi_lobby_game_setting_game_round_title">라운드 수</string>
    <string name="multi_lobby_game_setting_game_round_s">%s판</string>
    <string name="multi_lobby_game_setting_difficulty_title">난이도</string>
</resources>